changed cv document to latest

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="hero-section-contact">
           <div class="hero-button-group">
-            <a href="images/KHALIDABDELA_resume copy.docx" id="cv-button"
+            <a href="images/KHALIDABDELA_RESUME copy.pdf" id="cv-button"
               >Download CV</a
             >
             <a href="mailto:khalid.abdela04@gmail.com" id="contact-button">
