adding splash screen

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     ></script>
   </head>
   <body>
+    <div id="preloader"></div>
+
     <header id="header">
       <img class="logo" src="images/TracedLogoKA copy 2.png" alt="logo" />
       <nav>
