--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
             <a href="https://www.linkedin.com/in/khalid-abdela"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/khalidabdela"
+              ><i class="fa-brands fa-github"></i
+            ></a>
           </div>
         </div>
       </section>
@@ -143,7 +145,9 @@
                   <a href="https://www.linkedin.com/in/khalid-abdela"
                     ><i class="fa-brands fa-linkedin-in"></i
                   ></a>
-                  <a href="#"><i class="fa-brands fa-github"></i></a>
+                  <a href="https://github.com/khalidabdela"
+                    ><i class="fa-brands fa-github"></i
+                  ></a>
                 </div>
               </div>
             </div>
