change preloader animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <div id="preloader"></div>
+    <div class="loader">P O I S E</div>
 
     <header id="header">
       <img class="logo" src="images/TracedLogoKA copy 2.png" alt="logo" />
