added hr under education in about section

--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
             <div class="about-container">
               <div class="details-container">
                 <h3>Education</h3>
+                <hr />
                 <p>
-                  The University of Queensland <br />Bachelor of Engineering
+                  - The University of Queensland -<br />Bachelor of Engineering
                   (Honours) / Master of Engineering
                 </p>
               </div>
