added missing text in the contact me form

--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
             <div class="contact-info">
               <h3 class="title">Let's get in touch</h3>
               <p class="text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Mollitia quae nostrum labore perspiciatis eos ad iure obcaecati
-                delectus adipisci at explicabo, hic tenetur eius nulla accusamus
-                reiciendis error atque nihil?
+                I'm always open to new opportunities, collaborations, and
+                discussions. Whether you have a project idea, internship
+                opportunity, or just want to connect, feel free to reach out!
               </p>
 
               <div class="info">
