--- a/index.html
+++ b/index.html
@@ -109,8 +109,40 @@
       </section>
 
       <section id="projects-section">
-        <p>Dive Into</p>
-        <h1>My Projects</h1>
+        <div class="project-container-title">
+          <p>Dive Into</p>
+          <h1>My Projects</h1>
+        </div>
+        <div class="projects">
+          <div class="project-one">
+            <div class="project-image"></div>
+            <div class="project-details">
+              <div class="project-name"><h1>Spreadsheet Application</h1></div>
+              <div class="languages-used">
+                <div class="language-capsule"><p>Java</p></div>
+              </div>
+              <div class="project-description">
+                <p>
+                  A versatile spreadsheet application designed to handle basic
+                  arithmetic operations while also offering additional
+                  interactive features, including built-in games like Snake,
+                  Game of Life, and Tetris for enhanced functionality and
+                  engagement.
+                </p>
+              </div>
+              <div class="more-button">
+                <a href="read-more-btn">Read more</a>
+                <a href="https://github.com/khalidabdela/java-spreadsheet-app"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project-two"></div>
+          <div class="project-three"></div>
+          <div class="project-four"></div>
+        </div>
       </section>
 
       <section id="contact-section">
